force-app/main/default/objects/Shipping_Line_Charge__c/Shipping_Line_Charge__c.object-meta.xml
<CustomObject>
    <label>Shipping Line Charge</label>
    <nameField>
        <displayFormat>SL-Charge-{0000}</displayFormat>
        <label>SL Charge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipping Line Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>