force-app/main/default/objects/Shipping_Line_Charge__c/fields/BAF__c.field-meta.xml
<CustomField>
    <fullName>BAF__c</fullName>
    <inlineHelpText>Bunker Recovery Adjustment Charges</inlineHelpText>
    <label>BAF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>