force-app/main/default/objects/Shipping_Line_Charge__c/fields/Bunker_surcharge__c.field-meta.xml
<CustomField>
    <fullName>Bunker_surcharge__c</fullName>
    <label>Bunker surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>