force-app/main/default/objects/Shipping_Line_Charge__c/fields/Cleaning_Charges__c.field-meta.xml
<CustomField>
    <fullName>Cleaning_Charges__c</fullName>
    <label>Cleaning Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>