force-app/main/default/objects/Shipping_Line_Charge__c/fields/CMC__c.field-meta.xml
<CustomField>
    <fullName>CMC__c</fullName>
    <label>Container Maintenance Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>