force-app/main/default/objects/Shipping_Line_Charge__c/fields/DG_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>DG_Surcharge__c</fullName>
    <label>DG Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>