force-app/main/default/objects/Shipping_Line_Charge__c/fields/DTHC__c.field-meta.xml
<CustomField>
    <fullName>DTHC__c</fullName>
    <inlineHelpText>Destination Terminal handling Charges</inlineHelpText>
    <label>DTHC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>