force-app/main/default/objects/Shipping_Line_Charge__c/fields/Inland_Handling_Fees__c.field-meta.xml
<CustomField>
    <fullName>Inland_Handling_Fees__c</fullName>
    <label>Inland Handling Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>