force-app/main/default/objects/Shipping_Line_Charge__c/fields/ISPS__c.field-meta.xml
<CustomField>
    <fullName>ISPS__c</fullName>
    <inlineHelpText>Ocean Carrier-Intl Ship &amp; port</inlineHelpText>
    <label>ISPS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>