force-app/main/default/objects/Shipping_Line_Charge__c/fields/Offset_Value__c.field-meta.xml
<CustomField>
    <fullName>Offset_Value__c</fullName>
    <label>Offset Value</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>