force-app/main/default/objects/Shipping_Line_Charge__c/fields/RMS__c.field-meta.xml
<CustomField>
    <fullName>RMS__c</fullName>
    <label>RMS</label>
    <referenceTo>RMS__c</referenceTo>
    <relationshipLabel>Shipping Line Charges</relationshipLabel>
    <relationshipName>Shipping_Line_Charges</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>