force-app/main/default/objects/Shipping_Line_Charge__c/fields/War_Risk_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>War_Risk_Surcharge__c</fullName>
    <label>War Risk Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>